// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Navigation handle hover of about page 1`] = `
Object {
  "query": Array [
    "
  query AboutPage {
    pageAboutUs {
      headerImage
      headerText1
      headerText2
      headerTextBgColor
      contactTitle
      funText
      funTitle
      goodText
      goodTitle
      imageBleed
      stabilityIcons
      stabilityText
      stabilityTitle
      team
      valueText
      valueTitle
    }
  }
",
  ],
}
`;

exports[`components/Navigation handle hover of how we work 1`] = `
Object {
  "query": Array [
    "
  query HowWeWorkPage {
    openpositions {
      location
      id
      title
    }
    pageHowWeWork {
      headerImage
      headerText1
      headerText2
      headerTextBgColor
      contactTitle
      customersText
      customersTitle
      hiringTitle
      openApplicationText
      openApplicationHeader
      imageBleed
      methodText
      methodTitle
      sharingText
      sharingTitle
      team
      teamText
      teamTitle
    }
  }
",
  ],
}
`;

exports[`components/Navigation handle hover of logo 1`] = `
Object {
  "query": Array [
    "
  query HomePage {
    pageStart {
      headerImage
      headerText1
      headerText2
      headerTextBgColor
      aiTitle
      aiText
      aiSlug
      aiLinkText
      codeMobileImage
      codeText
      codeTitle
      codeLogo
      codeSlug
      codeLinkText
      contactTitle
      cultureMobileImage
      cultureText
      cultureTitle
      cultureLogo
      cultureSlug
      cultureLinkText
      strategyMobileImage
      strategyText
      strategyTitle
      strategyLogo
      strategySlug
      strategyLinkText
      team
    }
  }
",
  ],
}
`;

exports[`components/Navigation handle hover of our projects 1`] = `
Object {
  "query": Array [
    "
  query CasesPage {
    pageCases {
      headerImage
      headerText1
      headerText2
      headerTextBgColor
      contactTitle
      team
    }
    cases {
      location
      shortDescription
      slug
      thumbnailImage
      title
    }
  }
",
  ],
}
`;

exports[`components/Navigation handle hover of the team page 1`] = `
Object {
  "query": Array [
    "
  query TeamPage {
    pageTeam {
      headerImage
      headerText1
      headerText2
      headerTextBgColor
      contactTitle
      team
    }
    team {
      avatar
      email
      location
      name
      phoneNumber
      short
      title
    }
  }
",
  ],
}
`;

exports[`components/Navigation handle hover of work with us 1`] = `
Object {
  "query": Array [
    "
  query WorkPage {
    pageWork {
      headerImage
      headerText1
      headerText2
      headerTextBgColor
      contactTitle
      openApplicationText
      openApplicationLabel
      team
    }
    openpositions {
      id
      location
      role
      title
    }
  }
",
  ],
}
`;
